--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
     build: .
     container_name: sheerid-tgbot
     restart: unless-stopped
+    depends_on:
+      mysql:
+        condition: service_healthy
 
     # 环境变量
     environment:
@@ -14,7 +17,7 @@ services:
       - CHANNEL_URL=${CHANNEL_URL:-https://t.me/pk_oa}
       - ADMIN_USER_ID=${ADMIN_USER_ID}
       # MySQL配置
-      - MYSQL_HOST=${MYSQL_HOST:-localhost}
+      - MYSQL_HOST=${MYSQL_HOST:-mysql}
       - MYSQL_PORT=${MYSQL_PORT:-3306}
       - MYSQL_USER=${MYSQL_USER:-tgbot_user}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
@@ -31,5 +34,36 @@ services:
         max-size: "10m"
         max-file: "3"
 
-    # 网络模式
-    network_mode: bridge
+    networks:
+      - app-network
+
+  mysql:
+    image: mysql:8.0
+    container_name: sheerid-mysql
+    restart: unless-stopped
+    environment:
+      - TZ=Asia/Shanghai
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-root_password}
+      - MYSQL_DATABASE=${MYSQL_DATABASE:-tgbot_verify}
+      - MYSQL_USER=${MYSQL_USER:-tgbot_user}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-your_password_here}
+    command: ["--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci"]
+    volumes:
+      - mysql_data:/var/lib/mysql
+    ports:
+      - "${MYSQL_PORT:-3306}:3306"
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost -uroot -p$${MYSQL_ROOT_PASSWORD}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
+
+volumes:
+  mysql_data:
