--- a/env.example
+++ b/env.example
@@ -5,16 +5,16 @@ CHANNEL_URL=https://t.me/your_channel
 ADMIN_USER_ID=123456789
 
 # MySQL 数据库配置
-MYSQL_HOST=localhost
+MYSQL_HOST=mysql
 MYSQL_PORT=3306
 MYSQL_USER=tgbot_user
 MYSQL_PASSWORD=your_password_here
 MYSQL_DATABASE=tgbot_verify
+MYSQL_ROOT_PASSWORD=root_password
 
 # 积分配置（可选，默认值在 config.py 中）
 # VERIFY_COST=1
 # CHECKIN_REWARD=1
 # INVITE_REWARD=2
 # REGISTER_REWARD=1
-
 
